<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/BackgroundColor"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/name"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_marginTop="22dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/age"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="31dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sex"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="29dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/weight"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/height"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="33dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activity"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="26dp"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp"
        android:background="@drawable/edit_text_style"
        android:layout_above="@+id/textView3"
        android:maxLength="16"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignBottom="@+id/textView3"
        android:background="@drawable/edit_text_style"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:maxLength="3"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="14dp"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:buttonTint="#3399FF"
            android:textColor="#ffffff"
            android:checked="true"
            android:drawableRight="@drawable/man_icon_32"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:buttonTint="#3399FF"
            android:textColor="#ffffff"
            android:drawableRight="@drawable/woman_icon_32"
            android:checked="false" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup"
        android:background="@drawable/edit_text_style"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:maxLength="4"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:layout_alignTop="@+id/editText3"
        android:background="@drawable/edit_text_style"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toEndOf="@+id/editText2"
        android:layout_alignBottom="@+id/editText3" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:background="@drawable/edit_text_style"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_alignTop="@+id/spinner"
        android:layout_above="@+id/textView7"
        android:layout_alignRight="@+id/spinner1"
        android:layout_alignEnd="@+id/spinner1"
        android:background="@drawable/edit_text_style"
        android:layout_toRightOf="@+id/editText2"
        android:layout_toEndOf="@+id/editText2" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:id="@+id/spinner3"
        android:background="@drawable/edit_text_style"
        android:singleLine="false"
        android:scrollHorizontally="false"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_alignTop="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_marginTop="82dp"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/button"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
